# final

./: INTEGRATION_CHECKLIST.md  RAG_INTEGRATION_README.md  RAG_INTEGRATION_SUMMARY.md  RAG_VISUAL_GUIDE.md  README.md  SOW.docx  logging.yaml  main.py  pyproject.toml  requirements.txt  run.py  test_rag_integration.py
api/: templates_api.py
api/endpoints/: document.py
core/: document.py  llm.py  store.py
core/agents/: agents.py  drafting.py  drafting_agent.py  editor.py  editor_agent.py  extractor.py  extractor_agent.py  graph.py  section.py  section_editor.py  state.py  style_extractor.py  style_extractor_agent.py  targeted_editing_graph.py  targeted_editing_nodes.py  user_proxy_agent.py
core/config/: llm_config.py  rag_config.py
core/utils/: file_utils.py  style_utils.py  text_extractor.py  text_utils.py
core/workflows/: document_drafting.py  document_editor.py  document_extraction.py  document_pipeline.py  run_extraction.py  style_guided_generation.py
docs/: Doc Prep - Presentation.pptx  Doc Prep - Technical Documentation.docx  RAG_INTEGRATION_GUIDE.md  RAG_QUICK_START.md  STYLE_GUIDANCE_FEATURE.md
feedback_data/: feedback_log.json
outputs/: docx_report_20250930_084548.docx  docx_report_20251001_113330.docx  extracted_report_20250930_084548.json  extracted_report_20251001_113330.json  extracted_report_20251016_150402.json
samples/: README.md
style_extraction_testing/: report_style_5.docx
templates/: generate_report.html  index.html  proposal_template.json  report_templates.html  targeted_edit.html  template-editor.html  template_schema.json
(+15 files in other folders)
