[project]
name = "automated-document-preparation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag2[openai]>=0.9.10",
    "docx2pdf>=0.1.8",
    "fastapi[standard]>=0.118.0",
    "fpdf>=1.7.2",
    "grandalf>=0.8",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "jsonschema>=4.25.1",
    "langchain-classic>=1.0.0",
    "langchain-huggingface>=1.0.1",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.10",
    "pdfplumber>=0.11.7",
    "pillow>=11.3.0",
    "pyautogen>=0.10.0",
    "pymupdf>=1.26.4",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.37.0",
]
